--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "socket.io": "^2.2.0"
   },
   "engines": {
-    "node": "10.x"
+    "node": "10.x",
+    "npm": "^3.8.6" 
   },
   "repository": {
     "type": "git",
