--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "hex64": "^0.4.0",
     "http": "0.0.0",
     "net": "^1.0.2",
-    "socket.io": "^2.2.0"
+    "os": "^0.1.1",
+    "socket.io": "^2.2.0",
+    "web3": "^1.0.0-beta.46"
   },
   "engines": {
     "node": "10.x",
-    "npm": "^3.8.6" 
+    "npm": "^3.8.6"
   },
   "repository": {
     "type": "git",
